<resources>
    <string name="app_name">Firespark</string>
    <string name="LogInCaption">Good to have you back!</string>
    <string name="LogInTitle">Log in</string>
    <string name="SignupTitle">Sign up</string>
    <string name="SignupCaption">It\'s free!</string>
    <string name="WelcomeCaption">A network where you can share your thoughts with the world.</string>
    <string name="LogIn">Log in</string>
    <string name="Signup">Sign up</string>
    <string name="Email">Email</string>
    <string name="EmailOrUsername">Email or Username</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="SignupPassword">Password</string>
    <string name="DisplayName">First and Last Name</string>
    <string name="NotYetImplemented">Action not yet implemented.</string>
    <string name="NameTooShort">Name must  be at least 1 character long.</string>
    <string name="PasswordsDoNotMatch">Passwords do not match.</string>
    <string name="UserCreateSuccess">Your account has been created.</string>
    <string name="PasswordTooShort">Your password is too short.</string>
    <string name="SignUpFailed">Sign up failed. Check email and try again…</string>
    <string name="CreateUserEmailAlreadyExists">This email is already in use.</string>
    <string name="CreateUserWeakPassword">Your password is too weak.</string>
    <string name="CreateUserUnknownError">Failed to sign up. Check your internet connection.</string>
    <string name="CreateUserVerificationEmailSent">Check your email to verify your account.</string>
    <string name="CreateUserVerificationEmailNotSent">An email could not be sent to verify this account.</string>
    <string name="PleaseWait">Please wait…</string>
    <string name="UserNotVerified">Check your email to verify this account.</string>
    <string name="CannotLogIn">Incorrect email or password.</string>
    <string name="CreateUserEmptyName">Name cannot be empty.</string>
    <string name="CreateUserEmptyEmailOrPassword">Email and password cannot be empty.</string>
    <string name="CreateUserInvalidEmail">Cannot sign up with the provided email.</string>
    <string name="ProfilePage">Profile</string>
    <string name="HomePage">Home</string>
    <string name="PopularPage">Popular</string>
    <string name="LogOut">Log out</string>
    <string name="Placeholder">Placeholder</string>
    <string name="UserName">Username</string>
    <string name="SparkLikesTimestamp">%d Likes - %s</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquet in est ac ultricies. Nunc at varius neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="SparkLikes">Likes</string>
    <string name="Timestamp">Timestamp</string>
    <string name="NewComment">Comment…</string>
    <string name="UpToSend">Swipe up to send</string>
    <string name="NewSpark">New Spark</string>
    <string name="NewSparkHint">What are you thinking about?</string>
    <string name="ReleaseHereToSend">Release here to send!</string>
    <string name="NoDataText">It\'s empty here!</string>
    <string name="SendingSpark">Sending Spark. Please wait…</string>
    <string name="LoadingData">Loading…</string>
    <string name="Username">Username</string>
    <string name="SignUpUsername">Unique Username</string>
    <string name="CreateUserInvalidFirstLastName">Invalid First and Last Name.</string>
    <string name="CreateUserInvalidUsername">Invalid Username.</string>
    <string name="CreateUserEmptyEmail">Email cannot be empty.</string>
    <string name="DeleteSparkTitle">Delete Spark?</string>
    <string name="DeleteSparkMessage">Are you sure you want to delete this Spark? This action cannot be undone.</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="DeleteSparkSuccess">The Spark has been deleted.</string>
    <string name="CreateUserUsernameExists">This username is not available.</string>
    <string name="UserJoined">Joined on %s</string>
    <string name="Follow">Follow</string>
    <string name="Unfollow">Unfollow</string>
    <string name="RequestProfileUserFailure">Could not retrieve user data.</string>
    <string name="RequestProfileSparksFailure">Could not retrieve user sparks.</string>
    <string name="SearchUserHelp">Search a user by their name or username. It is not required to use \"@\".</string>
    <string name="Search">Search</string>
    <string name="NoCommentsText">No comments here.</string>
    <string name="Reply">Reply</string>
    <string name="UserHandle">\@%s</string>
    <string name="UserFollowers">%d Followers</string>
    <string name="UserFollowing">Following %d</string>
    <string name="SparkOwnerUsername">%s (@%s)</string>
    <string name="DeletedComment"><![CDATA[<<<deleted comment>>>]]></string>
    <string name="DeleteCommentTitle">Delete Comment?</string>
    <string name="DeleteCommentMessage">Are you sure you want to delete this Comment? This action cannot be undone.</string>
    <string name="SearchUserHint">Name or Username</string>
    <string name="FirstLastName">First and Last Name</string>
    <string name="LoggedOut">You have been logged out</string>
    <string name="LoggedOutMessage">You have been automatically logged out for security reasons. Please sign in again to keep using Firespark.</string>
    <string name="OK">OK</string>
    <string name="FollowersTitle">\@%s\'s Followers</string>
    <string name="FollowingTitle">\@%s\'s Following</string>

    <!--Responses-->
    <string name="ResponseSendSparkEmpty">Cannot send an empty Spark!</string>
    <string name="ResponseSendSparkTooLong">Sparks body is too long.</string>
    <string name="ResponseSendSparkFailure">An error occurred while sending your spark.</string>
    <string name="ResponseDeleteSparkFailure">The Spark could not be deleted.</string>
    <string name="ResponseLikeSparkFailure">Failed to like the Spark…</string>
    <string name="ResponseUnlikeSparkFailure">Failed to remove like from the Spark…</string>
    <string name="ResponseFollowUserFailure">User cannot be followed at the moment.</string>
    <string name="ResponseUnfollowUserFailure">User cannot be unfollowed at the moment.</string>
    <string name="ResponseSearchUserByUsernameFailure">User not found.</string>
    <string name="ResponseProfileDataFailure">Could not retrieve user data.</string>
    <string name="ResponseSparkDataFailure">Could not retrieve spark data.</string>
    <string name="ResponsePopularDataFailure">Could not retrieve popular Sparks.</string>
    <string name="ResponseProfileDataRefreshFailure">Could not refresh profile.</string>
    <string name="ResponseHomeDataFailure">Could not acquire home data.</string>
    <string name="ResponseHomeDataRefreshFailure">Could not refresh home data.</string>
    <string name="ResponseSendCommentFailure">Could not send comment.</string>
    <string name="ResponseSendCommentEmptyBody">Cannot send an empty comment.</string>
    <string name="ResponseDeleteCommentFailure">Could not delete comment.</string>
    <string name="ResponseNetworkError">Firespark server could not be reached. Please try again.</string>
    <string name="ResponseSparkDataRefreshFailure">Could not refresh spark data.</string>
    <string name="ResponseLikeCommentFailure">Could not like comment.</string>
    <string name="ResponseUnlikeCommentFailure">Could not unlike comment.</string>
    <string name="ResponseSendCommentTooLong">Comment body is too long.</string>
    <string name="ResponseSearchUserNoResults">No users found with that name.</string>
    <string name="ResponsePopularDataRefreshFailure">Could not refresh popular data.</string>
    <string name="ResponseUserFollowersFailure">Could not acquire the user\'s followers.</string>
    <string name="ResponseUserFollowingFailure">Could not acquire the user\'s following.</string>
</resources>