<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/CommentOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserName"
        android:textAppearance="@style/TextAppearance.Firespark.Body1"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/CommentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LoremIpsum"
        android:textAppearance="@style/TextAppearance.Firespark.Body1"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/CommentOwner" />

    <TextView
        android:id="@+id/CommentTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Timestamp"
        android:textAppearance="@style/TextAppearance.Firespark.Body2"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>