<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/SparkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/spark_background"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/SparkOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:textAppearance="@style/TextAppearance.Firespark.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="12dp" />

        <TextView
            android:id="@+id/SparkTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Timestamp"
            android:textAppearance="@style/TextAppearance.Firespark.Body2"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/SparkBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/LoremIpsum"
            android:textAppearance="@style/TextAppearance.Firespark.Body1"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/SparkOwner" />

        <TextView
            android:id="@+id/SparkLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SparkLikes"
            android:textAppearance="@style/TextAppearance.Firespark.Body2"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/SparkLike"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/SparkLike" />

        <ImageView
            android:id="@+id/SparkLike"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:padding="6dp"
            android:src="@drawable/thumbs_up_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SparkBody" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/SwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/NewCommentLayout"
        app:layout_constraintTop_toBottomOf="@id/SparkLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SparkComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/SendComment"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/icon_send"
        app:layout_constraintBottom_toBottomOf="@id/NewCommentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/NewCommentLayout"
        app:tint="@color/primaryColor" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NewCommentLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/NewComment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/SendComment"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="48" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>